code-server.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: code-server
spec:
 ports:
 - port: 8080
   targetPort: 8080
 selector:
   app: code-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - image: myusername/code-server # Put int the name of the container you created
        imagePullPolicy: Always
        name: code-server
        args: ["/home/coder/petclinic/"]
        volumeMounts:
        - name: code-server-pv-claim
          mountPath: /home/coder/petclinic
      volumes:
      - name: code-server-pv-claim
        persistentVolumeClaim:
          claimName: code-server-pv-claim
